--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                         <p class="text-xs text-slate-500 font-bold mt-2">CÓDIGO DE AUTENTICIDADE: AE-9548-BR-2026</p>
                     </div>
 
-                    <p>Pelo presente instrumento particular, de um lado a <strong>LIBERO CAPITAL LTDA.</strong>, inscrita no CNPJ/ME sob o n.º 47.310.682/0001-99, com sede administrativa na Avenida Paulista, 1374, 4º andar, CEP 01310-100, São Paulo/SP, doravante denominada <strong>CREDORA</strong>, e do outro lado, a <strong>PESSOA JURÍDICA MUTUÁRIA</strong> devidamente identificada pelos metadados de acesso, resolvem pactuar as seguintes condições irrevogáveis:</p>
+                    <p>Pelo presente instrumento particular, de um lado a <strong>42.368.671 MAX FABRICIO BONDAN.</strong>, inscrita no CNPJ/ME sob o n.º 42.368.671/0001-05, com sede administrativa na Avenida Paulista, 1374, 4º andar, CEP 01310-100, São Paulo/SP, doravante denominada <strong>CREDORA</strong>, e do outro lado, a <strong>PESSOA JURÍDICA MUTUÁRIA</strong> devidamente identificada pelos metadados de acesso, resolvem pactuar as seguintes condições irrevogáveis:</p>
 
                     <h2>CLÁUSULA 1ª – DO OBJETO E DISPONIBILIDADE</h2>
                     <p>1.1. O objeto deste contrato é a abertura de limite de crédito empresarial rotativo no valor global de <strong>R$ 2.000.000,00 (dois milhões de reais)</strong>, para livre utilização em capital de giro.</p>
@@ -170,7 +170,7 @@
 
         // Configuração do WhatsApp
         const WHATSAPP_NUMBER = "5511954802338"; // Formato Internacional
-        const WHATSAPP_MESSAGE = "Olá! Acabei de assinar o contrato Aprovação Elite de R$ 2.000.000,00. Aguardo a liberação do PIX.";
+        const WHATSAPP_MESSAGE = "Olá! Acabei de assinar o contrato Aprovação Elite de R$ 20.000,00. Aguardo a liberação do PIX.";
 
         function checkScroll() {
             const scrollTotal = contractBox.scrollHeight - contractBox.clientHeight;
